--- a/i18n/ru.all.yaml
+++ b/i18n/ru.all.yaml
@@ -23,6 +23,8 @@ button_reset:
   other: "\U0001F525 Сбросить набор"
 button_share:
   other: Воспользоваться твоим набором!
+button_stats:
+  other: "\U0001F4CA Статистика"
 cancel_add_pack:
   other: Ты отменил процесс добавления новых наборов в твой.
 cancel_add_sticker:
@@ -87,6 +89,13 @@ reply_start:
     Привет, я [@{{.Username}}](tg://user?id={{.ID}})!
     Я могу создать твой персональный набор стикеров из других наборов.
     Без ограничений и установки. В любых чатах. Бесплатно.
+reply_stats:
+  other: |-
+    *Пользователей:* {{.Users}}
+
+    *Файлов:* {{.Files}}
+    *Стикеров:* {{.Stickers}}
+    *Наборов:* {{.Sets}}
 reply_switch_button:
   other: Эта кнопка поможет тебе быстро вызвать твой набор для выбора нужного стикера.
 success_add_pack:
