--- a/i18n/ru/ru.replies.yaml
+++ b/i18n/ru/ru.replies.yaml
@@ -29,3 +29,10 @@ reply_help:
     Для просмотра и отправки стикеров из твоего набора просто набери `@{{.Username}}` (и пробел) в любом чате.
 reply_switch_button:
   other: Эта кнопка поможет тебе быстро вызвать твой набор для выбора нужного стикера.
+reply_stats:
+  other: |
+    *Пользователей:* {{.Users}}
+    
+    *Файлов:* {{.Files}}
+    *Стикеров:* {{.Stickers}}
+    *Наборов:* {{.Sets}}
